# torrent.garden

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  build.sh  deploy.sh  docker-compose-local.yml  docker-compose.yml  manage.sh  pyproject.toml  rxconfig.py
docker/backend/: Dockerfile
docker/caddy/: Caddyfile
docker/valkey/: valkey.conf
torrent_garden/: __init__.py  torrent_garden.py
torrent_garden/api/: torrent.py
torrent_garden/db/: count.py  graph.py  model.py
torrent_garden/ui/: helper.py
torrent_garden/ui/component/: navbar.py
torrent_garden/ui/component/ad/: banner.py
torrent_garden/ui/component/button/: debounced.py  navbar.py  open_torrent.py
torrent_garden/ui/component/list/: file.py  torrent.py
torrent_garden/ui/component/table/: file.py  file_search.py  torrent.py
torrent_garden/ui/page/: about.py  base.py  browse.py  file_torrents.py  metrics.py  root.py  search.py  search_files.py  search_torrents.py  torrent.py
torrent_garden/ui/state/: base.py  browse.py  metrics.py  root.py  search.py  search_files.py  search_torrents.py
torrent_garden/ui/state/torrent/: action.py  view.py
torrent_garden/utils/: backfill_counts.py  client_fingerprint.py  create_ads.py  create_clients.py
